--- a/mce2vga.qsf
+++ b/mce2vga.qsf
@@ -175,4 +175,6 @@ set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to UP_BTN
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to DOWN_BTN
 set_global_assignment -name TIMEQUEST_MULTICORNER_ANALYSIS ON
 set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
+set_global_assignment -name VHDL_FILE ctrl_params.vhd
+set_global_assignment -name VHDL_FILE osd_rom.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
