Set voltage pins back to 2.5v

--- a/mce2vga.qsf
+++ b/mce2vga.qsf
@@ -177,79 +177,79 @@ set_global_assignment -name VHDL_FILE ctrl_params.vhd
 set_global_assignment -name VHDL_FILE osd_rom.vhd
 set_global_assignment -name STRATIXV_CONFIGURATION_SCHEME "PASSIVE SERIAL"
 set_global_assignment -name RESERVE_ALL_UNUSED_PINS_WEAK_PULLUP "AS INPUT TRI-STATED"
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to B0
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to B1
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to B2
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to B3
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CLK
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to DOWN_BTN
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to G0
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to G1
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to G2
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to G3
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to H
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HSYNC
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LED0
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LED1
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LED2
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LED3
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LEFT_BTN
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to PB
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to PG
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to PR
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to R0
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to R1
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to R2
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to R3
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RESET
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RIGHT_BTN
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SB
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SG
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SR
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_ADDR0
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_ADDR1
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_ADDR2
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_ADDR3
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_ADDR4
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_ADDR5
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_ADDR6
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_ADDR7
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_ADDR8
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_ADDR9
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_ADDR10
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_ADDR11
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_ADDR12
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_ADDR13
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_ADDR14
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_ADDR15
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_ADDR16
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_ADDR17
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_CE
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_DQ0
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_DQ1
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_DQ2
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_DQ3
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_DQ4
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_DQ5
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_DQ6
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_DQ7
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_DQ8
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_DQ9
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_DQ10
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_DQ11
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_DQ12
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_DQ13
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_DQ14
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_DQ15
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_LB
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_OE
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_UB
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SRAM_WE
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SW0
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SW1
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SW2
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SW3
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to UP_BTN
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to V
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VSYNC
+set_instance_assignment -name IO_STANDARD "2.5 V" -to B0
+set_instance_assignment -name IO_STANDARD "2.5 V" -to B1
+set_instance_assignment -name IO_STANDARD "2.5 V" -to B2
+set_instance_assignment -name IO_STANDARD "2.5 V" -to B3
+set_instance_assignment -name IO_STANDARD "2.5 V" -to CLK
+set_instance_assignment -name IO_STANDARD "2.5 V" -to DOWN_BTN
+set_instance_assignment -name IO_STANDARD "2.5 V" -to G0
+set_instance_assignment -name IO_STANDARD "2.5 V" -to G1
+set_instance_assignment -name IO_STANDARD "2.5 V" -to G2
+set_instance_assignment -name IO_STANDARD "2.5 V" -to G3
+set_instance_assignment -name IO_STANDARD "2.5 V" -to H
+set_instance_assignment -name IO_STANDARD "2.5 V" -to HSYNC
+set_instance_assignment -name IO_STANDARD "2.5 V" -to LED0
+set_instance_assignment -name IO_STANDARD "2.5 V" -to LED1
+set_instance_assignment -name IO_STANDARD "2.5 V" -to LED2
+set_instance_assignment -name IO_STANDARD "2.5 V" -to LED3
+set_instance_assignment -name IO_STANDARD "2.5 V" -to LEFT_BTN
+set_instance_assignment -name IO_STANDARD "2.5 V" -to PB
+set_instance_assignment -name IO_STANDARD "2.5 V" -to PG
+set_instance_assignment -name IO_STANDARD "2.5 V" -to PR
+set_instance_assignment -name IO_STANDARD "2.5 V" -to R0
+set_instance_assignment -name IO_STANDARD "2.5 V" -to R1
+set_instance_assignment -name IO_STANDARD "2.5 V" -to R2
+set_instance_assignment -name IO_STANDARD "2.5 V" -to R3
+set_instance_assignment -name IO_STANDARD "2.5 V" -to RESET
+set_instance_assignment -name IO_STANDARD "2.5 V" -to RIGHT_BTN
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SB
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SG
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SR
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_ADDR0
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_ADDR1
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_ADDR2
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_ADDR3
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_ADDR4
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_ADDR5
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_ADDR6
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_ADDR7
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_ADDR8
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_ADDR9
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_ADDR10
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_ADDR11
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_ADDR12
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_ADDR13
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_ADDR14
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_ADDR15
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_ADDR16
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_ADDR17
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_CE
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_DQ0
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_DQ1
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_DQ2
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_DQ3
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_DQ4
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_DQ5
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_DQ6
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_DQ7
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_DQ8
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_DQ9
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_DQ10
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_DQ11
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_DQ12
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_DQ13
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_DQ14
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_DQ15
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_LB
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_OE
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_UB
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SRAM_WE
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SW0
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SW1
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SW2
+set_instance_assignment -name IO_STANDARD "2.5 V" -to SW3
+set_instance_assignment -name IO_STANDARD "2.5 V" -to UP_BTN
+set_instance_assignment -name IO_STANDARD "2.5 V" -to V
+set_instance_assignment -name IO_STANDARD "2.5 V" -to VSYNC
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
